[gd_scene load_steps=20 format=3 uid="uid://4aaln4wygpjj"]

[ext_resource type="Script" path="res://scenes/creditsmenu.gd" id="1_7xqga"]
[ext_resource type="AudioStream" uid="uid://by2l0nx8uf6c3" path="res://zenék/loop.mp3" id="1_j3m1a"]
[ext_resource type="VideoStream" path="res://pictures/Névtelen-videó-–-A-Clipchamppel-készült.ogv" id="1_l8ys8"]
[ext_resource type="Texture2D" uid="uid://cyih84co0yf00" path="res://pictures/stablista.png" id="2_tumq5"]
[ext_resource type="Texture2D" uid="uid://r1p1eyxcqdra" path="res://pictures/nyil1crop.png" id="5_xoxi4"]
[ext_resource type="AudioStream" uid="uid://c83i1jqk88q4f" path="res://zenék/buttonpress.mp3" id="6_0ihh2"]
[ext_resource type="Texture2D" uid="uid://dmfb1a13sjkwy" path="res://pictures/nyil2crop.png" id="6_wgjoq"]
[ext_resource type="AudioStream" uid="uid://1v5x41gphjy3" path="res://zenék/kurzor.mp3" id="7_2nyb6"]
[ext_resource type="Script" path="res://scenes/vissza.gd" id="7_8k01o"]
[ext_resource type="VideoStream" path="res://pictures/creditshatter2.ogv" id="8_ops3x"]
[ext_resource type="Texture2D" uid="uid://di5frnb13vyq0" path="res://pictures/tvkeret.png" id="9_b166e"]
[ext_resource type="Script" path="res://scenes/tv_hatter.gd" id="9_qm605"]
[ext_resource type="Texture2D" uid="uid://c3kr6pkwr10io" path="res://pictures/szoveg1.png" id="11_osiw5"]
[ext_resource type="AudioStream" uid="uid://hnhw6iitdklq" path="res://zenék/hattérrel.mp3" id="14_njlo3"]

[sub_resource type="Animation" id="Animation_mon1h"]
resource_name = "Credits roll"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 974.5), Vector2(576, 334.25)]
}

[sub_resource type="Animation" id="Animation_xssuv"]
resource_name = "Credits roll_2"
length = 2.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 334.25)]
}

[sub_resource type="Animation" id="Animation_5uxlu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 974.5)]
}

[sub_resource type="Animation" id="Animation_bgqxj"]
resource_name = "White noise"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0youk"]
_data = {
"Credits roll": SubResource("Animation_mon1h"),
"Credits roll_2": SubResource("Animation_xssuv"),
"RESET": SubResource("Animation_5uxlu"),
"White noise": SubResource("Animation_bgqxj")
}

[node name="Credits" type="Node2D"]
script = ExtResource("1_7xqga")

[node name="háttérzene" type="AudioStreamPlayer2D" parent="."]
position = Vector2(483, 476)
scale = Vector2(0.147465, 0.178796)
stream = ExtResource("1_j3m1a")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 1920.0
offset_bottom = 1088.0
scale = Vector2(0.600011, 0.595605)
stream = ExtResource("1_l8ys8")
autoplay = true
loop = true

[node name="Stablista" type="Sprite2D" parent="."]
visible = false
position = Vector2(555, 346)
scale = Vector2(0.476637, 0.515566)
texture = ExtResource("2_tumq5")

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
z_index = 2
offset_left = 490.0
offset_top = 555.0
offset_right = 1229.0
offset_bottom = 885.0
scale = Vector2(0.147465, 0.178796)
texture_normal = ExtResource("5_xoxi4")
texture_pressed = ExtResource("6_wgjoq")
texture_hover = ExtResource("6_wgjoq")
texture_focused = ExtResource("6_wgjoq")
stretch_mode = 0
script = ExtResource("7_8k01o")

[node name="TvHatter" type="VideoStreamPlayer" parent="."]
visible = false
offset_left = 40.0
offset_top = 20.0
offset_right = 1960.0
offset_bottom = 1108.0
scale = Vector2(0.57, 0.57)
mouse_filter = 2
stream = ExtResource("8_ops3x")
loop = true
script = ExtResource("9_qm605")

[node name="TvKeret" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("9_b166e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 974.5)
scale = Vector2(0.6, 0.60463)
texture = ExtResource("11_osiw5")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0ihh2")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2nyb6")
bus = &"SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_njlo3")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0youk")
}

[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="TextureButton" method="_on_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
